crates/papyrus_storage/src/snapshots/papyrus_storage__serializers__serializers_test__hints_regression_hint_4045.snap
---
source: crates/papyrus_storage/src/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 15
- 205
- 1
- 42
- 0
- 0
- 9
- 0
- 0
- 4
- 0
- 2
- 137
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 17
- 2
- 144
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 0
- 254
- 255
- 0
- 255
- 255

