crates/papyrus_storage/src/snapshots/papyrus_storage__serializers__serializers_test__hints_regression_hint_4084.snap
---
source: crates/papyrus_storage/src/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 15
- 244
- 1
- 44
- 0
- 0
- 1
- 0
- 0
- 255
- 255
- 2
- 160
- 0
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 7
- 0
- 5
- 0

